            - Replaced hand-rolled container classes with Standard
              Template Library classes (transition only partially complete).
        Classes NBoolVector, NHashSet, NInfiniteArray, NIntMap,
                NOrderedPair, NPointerSet, NQueue, NSet, NStack
                and associates:
            - All removed in favour of Standard Template Library classes.
        Class FuncDelete, FuncNew, FuncNewCopyPtr, FuncNewCopyRef, HashPointer:
            - Added for use with Standard Template Library.
        Class NGroupExpressionTerm:
            - Changed from simple ordered pair to its own full class.
        Class NScript:
            - Changed list of variables to a proper map and removed routines
              getVariableIndex() and removeVariableAt().
            - Insistance on unique variable names; in enforcing this
              routine addVariable() now returns bool.
        Class NStringPair:
            - Removed.
        Class NTriangulation:
            - Added insertSplittingSurface().

Version 2.4  [ 4 April, 2002 ]
    OVERALL:
        - Much enhanced documentation.
        - Added SnapPea census and knot/link census to examples.
        - Added functionality changelog (HIGHLIGHTS.txt).
        - Added prepackaged Jython library directory.
    ENGINE:
        Overall structure:
            - Moved engine/imports to engine/foreign.
        Class NAngleStructure, NAngleStructureList, NAngleStructureVector:
            - Added.
        Class NConeRay:
            - Now a new class of its own accord, derived from
              NVectorDense and created to allow vertex solution routines
              to work in contexts outside normal surfaces.
        Class NNormalSurface:
            - Added getName() and setName().
        Class NNormalSurfaceVector:
            - Now derives from NConeRay, to which some routines have moved.
            - Changed declaration of createNonNegativeCone() to return