@@ -17,7 +17,8 @@ Version 2.5  [ (under development) ]
                 NOrderedPair, NPointerSet, NQueue, NSet, NStack
                 and associates:
             - All removed in favour of Standard Template Library classes.
-        Class FuncDelete, FuncNew, FuncNewCopyPtr, FuncNewCopyRef, HashPointer:
+        Class FuncDelete, FuncNew, FuncNewClonePtr, FuncNewCopyPtr,
+                FuncNewCopyRef, HashPointer:
             - Added for use with Standard Template Library.
         Class NGroupExpressionTerm:
             - Changed from simple ordered pair to its own full class.
